--- a/pune.html
+++ b/pune.html
@@ -1,9 +1,10 @@
 <html>
- <body bgcolor='ciyon'>
-   <h1>It Companies in Pune</h1>
-    <ul>
-     <h2> <li>Infosys</h2>
-       <h2><li>Persistent</h2>
-    </ul>
-  </body>
-</html> 
+ <body bgcolor='yellow'>
+    <h2>IT companies in Pune</h2>
+  <ul>
+   <h2><li>Infosys</h2>
+    <h2><li>Persistent</h2>
+  </ul>
+ </font>
+ <body>
+</html>
