--- a/two.html
+++ b/two.html
@@ -1,9 +1,9 @@
 <html>
-  <body>
-    <h1>City</h1>
-    <ol>
-     <h1><li><a href='pune.html' target='aa'>Pune</a></h1>
-     <h1><li><a href='mumbai.html' target='aa'>Mumbai</a></h1>
-    </ol>
-   </body>
- </html>
+ <body>
+  <h1>City</h1>
+  <ol>
+   <h1><li><a href='pune.html'target=aa'>Pune</a></h1>
+   <h1><li><a href='mumbai.html'target=aa'>Mumabi</a></h1>
+  </ol>
+ </body>
+</html> 
